Update run-flamecord.sh